--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -429,7 +429,7 @@ color:#777;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2rem 0;
+  margin: 30px 0 60px 0;
   width: 100%;
 }
 .pagination {
@@ -496,6 +496,45 @@ color:#777;
     flex-grow: 1; /* Allow details to take remaining space */
 }
 
+/*  */
+.audio-player {
+    position: fixed; /* Keep it at the bottom */
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--secondaryBg-color); 
+    padding: 5px; 
+    margin: 0 20px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); 
+    display: flex; 
+    flex-direction: column;
+    align-items: center; 
+    justify-content: space-between; 
+}
+.audio-player button {
+    margin: 10px;
+}
+.audio-player input[type="range"] {
+    width: 100%;
+    margin: 10px 0;
+}
+.audio-player button {
+    margin-right: 10px; /* Space between button and seek bar */
+    background-color: var(--primary-color);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.2s ease;
+}
+
+.audio-player input[type="range"] {
+    flex-grow: 1; /* Allow the seek bar to grow */
+    margin: 0 10px; /* Space around the seek bar */
+}
 
 
 /* Responsive styles */
@@ -595,9 +634,13 @@ color:#777;
         height: 400px;
     }
     .podcast-card img{
-    width: 100%;
-    height: 250px;
-}
+        width: 100%;
+        height: 250px;
+    }
+
+    .pagination-container {
+       margin-bottom: 60px;
+    }
 
     /* modal styles */
     .modal-content{
