--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -79,6 +79,17 @@ a{
     height: 45px;
     cursor: pointer;
 }
+.navbar{
+  display: flex;
+  gap: 15px;
+}
+.navbar button{
+  background-color: var(--secondaryBg-color);
+  border: none;
+  color: var(--primary-color);
+  font-size: 16px;
+  font-family: "Noto Sans";
+}
 
 /* Styles for the hero section  */
 .hero-section{
@@ -745,9 +756,9 @@ a{
 
     /* Modal styles */
     #modalDescription {
-    margin: 15px 0;
-    line-height: 1.5;
-    font-size: 10px;
+      margin: 15px 0;
+      line-height: 1.5;
+      font-size: 10px;
     }
     .modal-content {
         width: 678px;
